index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://script.google.com/macros/s/[PROJECT_ID]/exec'" />
+    <meta http-equiv="refresh" content="0; url='https://script.google.com/macros/s/AKfycbyyv4ivmCEGKKQQr0g4DDVsfpRhX3RBo6cDJiEHZcmEZ3yEE-gOn_IcEnKoUPb-gWnqnw/exec'" />
   </head>
 </html>
