--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://script.google.com/macros/s/AKfycbw2rVHr4SBJWfxjQjecdFob-608vJlK8MfqzX22sFU0ZXy3u2sAqXw6XvklSh2faEBS/exec'" />
+    <meta http-equiv="refresh" content="0; url='https://claude.ai/chats'" />
   </head>
 </html>
